--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ layout: default
 
 <div class="home">
     <div class="splash">
+        <video playsinline autoplay muted loop poster="/assets/splash--poster.jpg" id="bgvid">
+            <source src="/assets/splash.mp4" type="video/mp4">
+        </video>
         <img src="/assets/splash-text.svg" alt="Bournemouth University Digital Media Design Graduate Exhibition. 23-26 June 2017">
         <span id="countdown"></span>
     </div>
