--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ layout: default
 <div class="home">
     <div class="splash">
         <video playsinline autoplay muted loop poster="/assets/splash--poster.jpg" id="bgvid">
-            <source src="/assets/splash.mp4" type="video/mp4">
+            <source src="/assets/splash2.mp4" type="video/mp4">
         </video>
         <img src="/assets/splash-text.svg" alt="Bournemouth University Digital Media Design Graduate Exhibition. 23-26 June 2017">
         <span id="countdown"></span>
     </div>
 
     <div class="wrapper">
-        <section class="about">
+        <section class="about" id="about">
             <h1>About</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus inventore, voluptatum harum aspernatur. Molestias, necessitatibus. Fuga alias repellendus natus nostrum ut nam fugiat officiis? Veniam laborum asperiores ipsa commodi necessitatibus.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus inventore, voluptatum harum aspernatur. Molestias, necessitatibus. Fuga alias repellendus natus nostrum ut nam fugiat officiis? Veniam laborum asperiores ipsa commodi necessitatibus.</p>
@@ -20,7 +20,7 @@ layout: default
     </div>
 
 
-    <section class="works">
+    <section class="works" id="works">
         <div class="wrapper">
             <h1>Works</h1>
             <div class="button-group filter-button-group">
@@ -45,6 +45,25 @@ layout: default
             </div>
         </div>
     </section>
+
+    <section class="find-us" id="find-us">
+        <h1>Find us</h1>
+        <div id="map"></div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h1>Contact</h1>
+
+            <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#112;&#101;&#114;&#107;&#105;&#110;&#115;&#64;&#98;&#111;&#117;&#114;&#110;&#101;&#109;&#111;&#117;&#116;&#104;&#46;&#97;&#99;&#46;&#117;&#107;?subject=DMD Graduate Exhibition'>
+                       <div class="tile">
+
+                <img src="/assets/email-icon.png" alt="Contact">
+                <h2>Email</h2>
+                <p>Simon Perkins</p>
+                        </div>
+
+            </a>
+    </section>
 </div>
 
 <!--
@@ -63,15 +82,177 @@ layout: default
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="/js/isotope.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB973waf85HgWRC76BEyUo0XOhi2wDBo30&callback=initMap">
+
+
+</script>
 <script>
     /*!
- * imagesLoaded PACKAGED v4.1.2
- * JavaScript is all like "You images are done yet or what?"
- * MIT License
- */
+     * imagesLoaded PACKAGED v4.1.2
+     * JavaScript is all like "You images are done yet or what?"
+     * MIT License
+     */
 
-!function(t,e){"function"==typeof define&&define.amd?define("ev-emitter/ev-emitter",e):"object"==typeof module&&module.exports?module.exports=e():t.EvEmitter=e()}("undefined"!=typeof window?window:this,function(){function t(){}var e=t.prototype;return e.on=function(t,e){if(t&&e){var i=this._events=this._events||{},n=i[t]=i[t]||[];return-1==n.indexOf(e)&&n.push(e),this}},e.once=function(t,e){if(t&&e){this.on(t,e);var i=this._onceEvents=this._onceEvents||{},n=i[t]=i[t]||{};return n[e]=!0,this}},e.off=function(t,e){var i=this._events&&this._events[t];if(i&&i.length){var n=i.indexOf(e);return-1!=n&&i.splice(n,1),this}},e.emitEvent=function(t,e){var i=this._events&&this._events[t];if(i&&i.length){var n=0,o=i[n];e=e||[];for(var r=this._onceEvents&&this._onceEvents[t];o;){var s=r&&r[o];s&&(this.off(t,o),delete r[o]),o.apply(this,e),n+=s?0:1,o=i[n]}return this}},t}),function(t,e){"use strict";"function"==typeof define&&define.amd?define(["ev-emitter/ev-emitter"],function(i){return e(t,i)}):"object"==typeof module&&module.exports?module.exports=e(t,require("ev-emitter")):t.imagesLoaded=e(t,t.EvEmitter)}("undefined"!=typeof window?window:this,function(t,e){function i(t,e){for(var i in e)t[i]=e[i];return t}function n(t){var e=[];if(Array.isArray(t))e=t;else if("number"==typeof t.length)for(var i=0;i<t.length;i++)e.push(t[i]);else e.push(t);return e}function o(t,e,r){return this instanceof o?("string"==typeof t&&(t=document.querySelectorAll(t)),this.elements=n(t),this.options=i({},this.options),"function"==typeof e?r=e:i(this.options,e),r&&this.on("always",r),this.getImages(),h&&(this.jqDeferred=new h.Deferred),void setTimeout(function(){this.check()}.bind(this))):new o(t,e,r)}function r(t){this.img=t}function s(t,e){this.url=t,this.element=e,this.img=new Image}var h=t.jQuery,a=t.console;o.prototype=Object.create(e.prototype),o.prototype.options={},o.prototype.getImages=function(){this.images=[],this.elements.forEach(this.addElementImages,this)},o.prototype.addElementImages=function(t){"IMG"==t.nodeName&&this.addImage(t),this.options.background===!0&&this.addElementBackgroundImages(t);var e=t.nodeType;if(e&&d[e]){for(var i=t.querySelectorAll("img"),n=0;n<i.length;n++){var o=i[n];this.addImage(o)}if("string"==typeof this.options.background){var r=t.querySelectorAll(this.options.background);for(n=0;n<r.length;n++){var s=r[n];this.addElementBackgroundImages(s)}}}};var d={1:!0,9:!0,11:!0};return o.prototype.addElementBackgroundImages=function(t){var e=getComputedStyle(t);if(e)for(var i=/url\((['"])?(.*?)\1\)/gi,n=i.exec(e.backgroundImage);null!==n;){var o=n&&n[2];o&&this.addBackground(o,t),n=i.exec(e.backgroundImage)}},o.prototype.addImage=function(t){var e=new r(t);this.images.push(e)},o.prototype.addBackground=function(t,e){var i=new s(t,e);this.images.push(i)},o.prototype.check=function(){function t(t,i,n){setTimeout(function(){e.progress(t,i,n)})}var e=this;return this.progressedCount=0,this.hasAnyBroken=!1,this.images.length?void this.images.forEach(function(e){e.once("progress",t),e.check()}):void this.complete()},o.prototype.progress=function(t,e,i){this.progressedCount++,this.hasAnyBroken=this.hasAnyBroken||!t.isLoaded,this.emitEvent("progress",[this,t,e]),this.jqDeferred&&this.jqDeferred.notify&&this.jqDeferred.notify(this,t),this.progressedCount==this.images.length&&this.complete(),this.options.debug&&a&&a.log("progress: "+i,t,e)},o.prototype.complete=function(){var t=this.hasAnyBroken?"fail":"done";if(this.isComplete=!0,this.emitEvent(t,[this]),this.emitEvent("always",[this]),this.jqDeferred){var e=this.hasAnyBroken?"reject":"resolve";this.jqDeferred[e](this)}},r.prototype=Object.create(e.prototype),r.prototype.check=function(){var t=this.getIsImageComplete();return t?void this.confirm(0!==this.img.naturalWidth,"naturalWidth"):(this.proxyImage=new Image,this.proxyImage.addEventListener("load",this),this.proxyImage.addEventListener("error",this),this.img.addEventListener("load",this),this.img.addEventListener("error",this),void(this.proxyImage.src=this.img.src))},r.prototype.getIsImageComplete=function(){return this.img.complete&&void 0!==this.img.naturalWidth},r.prototype.confirm=function(t,e){this.isLoaded=t,this.emitEvent("progress",[this,this.img,e])},r.prototype.handleEvent=function(t){var e="on"+t.type;this[e]&&this[e](t)},r.prototype.onload=function(){this.confirm(!0,"onload"),this.unbindEvents()},r.prototype.onerror=function(){this.confirm(!1,"onerror"),this.unbindEvents()},r.prototype.unbindEvents=function(){this.proxyImage.removeEventListener("load",this),this.proxyImage.removeEventListener("error",this),this.img.removeEventListener("load",this),this.img.removeEventListener("error",this)},s.prototype=Object.create(r.prototype),s.prototype.check=function(){this.img.addEventListener("load",this),this.img.addEventListener("error",this),this.img.src=this.url;var t=this.getIsImageComplete();t&&(this.confirm(0!==this.img.naturalWidth,"naturalWidth"),this.unbindEvents())},s.prototype.unbindEvents=function(){this.img.removeEventListener("load",this),this.img.removeEventListener("error",this)},s.prototype.confirm=function(t,e){this.isLoaded=t,this.emitEvent("progress",[this,this.element,e])},o.makeJQueryPlugin=function(e){e=e||t.jQuery,e&&(h=e,h.fn.imagesLoaded=function(t,e){var i=new o(this,t,e);return i.jqDeferred.promise(h(this))})},o.makeJQueryPlugin(),o});
-    
+    ! function(t, e) {
+        "function" == typeof define && define.amd ? define("ev-emitter/ev-emitter", e) : "object" == typeof module && module.exports ? module.exports = e() : t.EvEmitter = e()
+    }("undefined" != typeof window ? window : this, function() {
+        function t() {}
+        var e = t.prototype;
+        return e.on = function(t, e) {
+            if (t && e) {
+                var i = this._events = this._events || {},
+                    n = i[t] = i[t] || [];
+                return -1 == n.indexOf(e) && n.push(e), this
+            }
+        }, e.once = function(t, e) {
+            if (t && e) {
+                this.on(t, e);
+                var i = this._onceEvents = this._onceEvents || {},
+                    n = i[t] = i[t] || {};
+                return n[e] = !0, this
+            }
+        }, e.off = function(t, e) {
+            var i = this._events && this._events[t];
+            if (i && i.length) {
+                var n = i.indexOf(e);
+                return -1 != n && i.splice(n, 1), this
+            }
+        }, e.emitEvent = function(t, e) {
+            var i = this._events && this._events[t];
+            if (i && i.length) {
+                var n = 0,
+                    o = i[n];
+                e = e || [];
+                for (var r = this._onceEvents && this._onceEvents[t]; o;) {
+                    var s = r && r[o];
+                    s && (this.off(t, o), delete r[o]), o.apply(this, e), n += s ? 0 : 1, o = i[n]
+                }
+                return this
+            }
+        }, t
+    }),
+    function(t, e) {
+        "use strict";
+        "function" == typeof define && define.amd ? define(["ev-emitter/ev-emitter"], function(i) {
+            return e(t, i)
+        }) : "object" == typeof module && module.exports ? module.exports = e(t, require("ev-emitter")) : t.imagesLoaded = e(t, t.EvEmitter)
+    }("undefined" != typeof window ? window : this, function(t, e) {
+        function i(t, e) {
+            for (var i in e) t[i] = e[i];
+            return t
+        }
+
+        function n(t) {
+            var e = [];
+            if (Array.isArray(t)) e = t;
+            else if ("number" == typeof t.length)
+                for (var i = 0; i < t.length; i++) e.push(t[i]);
+            else e.push(t);
+            return e
+        }
+
+        function o(t, e, r) {
+            return this instanceof o ? ("string" == typeof t && (t = document.querySelectorAll(t)), this.elements = n(t), this.options = i({}, this.options), "function" == typeof e ? r = e : i(this.options, e), r && this.on("always", r), this.getImages(), h && (this.jqDeferred = new h.Deferred), void setTimeout(function() {
+                this.check()
+            }.bind(this))) : new o(t, e, r)
+        }
+
+        function r(t) {
+            this.img = t
+        }
+
+        function s(t, e) {
+            this.url = t, this.element = e, this.img = new Image
+        }
+        var h = t.jQuery,
+            a = t.console;
+        o.prototype = Object.create(e.prototype), o.prototype.options = {}, o.prototype.getImages = function() {
+            this.images = [], this.elements.forEach(this.addElementImages, this)
+        }, o.prototype.addElementImages = function(t) {
+            "IMG" == t.nodeName && this.addImage(t), this.options.background === !0 && this.addElementBackgroundImages(t);
+            var e = t.nodeType;
+            if (e && d[e]) {
+                for (var i = t.querySelectorAll("img"), n = 0; n < i.length; n++) {
+                    var o = i[n];
+                    this.addImage(o)
+                }
+                if ("string" == typeof this.options.background) {
+                    var r = t.querySelectorAll(this.options.background);
+                    for (n = 0; n < r.length; n++) {
+                        var s = r[n];
+                        this.addElementBackgroundImages(s)
+                    }
+                }
+            }
+        };
+        var d = {
+            1: !0,
+            9: !0,
+            11: !0
+        };
+        return o.prototype.addElementBackgroundImages = function(t) {
+            var e = getComputedStyle(t);
+            if (e)
+                for (var i = /url\((['"])?(.*?)\1\)/gi, n = i.exec(e.backgroundImage); null !== n;) {
+                    var o = n && n[2];
+                    o && this.addBackground(o, t), n = i.exec(e.backgroundImage)
+                }
+        }, o.prototype.addImage = function(t) {
+            var e = new r(t);
+            this.images.push(e)
+        }, o.prototype.addBackground = function(t, e) {
+            var i = new s(t, e);
+            this.images.push(i)
+        }, o.prototype.check = function() {
+            function t(t, i, n) {
+                setTimeout(function() {
+                    e.progress(t, i, n)
+                })
+            }
+            var e = this;
+            return this.progressedCount = 0, this.hasAnyBroken = !1, this.images.length ? void this.images.forEach(function(e) {
+                e.once("progress", t), e.check()
+            }) : void this.complete()
+        }, o.prototype.progress = function(t, e, i) {
+            this.progressedCount++, this.hasAnyBroken = this.hasAnyBroken || !t.isLoaded, this.emitEvent("progress", [this, t, e]), this.jqDeferred && this.jqDeferred.notify && this.jqDeferred.notify(this, t), this.progressedCount == this.images.length && this.complete(), this.options.debug && a && a.log("progress: " + i, t, e)
+        }, o.prototype.complete = function() {
+            var t = this.hasAnyBroken ? "fail" : "done";
+            if (this.isComplete = !0, this.emitEvent(t, [this]), this.emitEvent("always", [this]), this.jqDeferred) {
+                var e = this.hasAnyBroken ? "reject" : "resolve";
+                this.jqDeferred[e](this)
+            }
+        }, r.prototype = Object.create(e.prototype), r.prototype.check = function() {
+            var t = this.getIsImageComplete();
+            return t ? void this.confirm(0 !== this.img.naturalWidth, "naturalWidth") : (this.proxyImage = new Image, this.proxyImage.addEventListener("load", this), this.proxyImage.addEventListener("error", this), this.img.addEventListener("load", this), this.img.addEventListener("error", this), void(this.proxyImage.src = this.img.src))
+        }, r.prototype.getIsImageComplete = function() {
+            return this.img.complete && void 0 !== this.img.naturalWidth
+        }, r.prototype.confirm = function(t, e) {
+            this.isLoaded = t, this.emitEvent("progress", [this, this.img, e])
+        }, r.prototype.handleEvent = function(t) {
+            var e = "on" + t.type;
+            this[e] && this[e](t)
+        }, r.prototype.onload = function() {
+            this.confirm(!0, "onload"), this.unbindEvents()
+        }, r.prototype.onerror = function() {
+            this.confirm(!1, "onerror"), this.unbindEvents()
+        }, r.prototype.unbindEvents = function() {
+            this.proxyImage.removeEventListener("load", this), this.proxyImage.removeEventListener("error", this), this.img.removeEventListener("load", this), this.img.removeEventListener("error", this)
+        }, s.prototype = Object.create(r.prototype), s.prototype.check = function() {
+            this.img.addEventListener("load", this), this.img.addEventListener("error", this), this.img.src = this.url;
+            var t = this.getIsImageComplete();
+            t && (this.confirm(0 !== this.img.naturalWidth, "naturalWidth"), this.unbindEvents())
+        }, s.prototype.unbindEvents = function() {
+            this.img.removeEventListener("load", this), this.img.removeEventListener("error", this)
+        }, s.prototype.confirm = function(t, e) {
+            this.isLoaded = t, this.emitEvent("progress", [this, this.element, e])
+        }, o.makeJQueryPlugin = function(e) {
+            e = e || t.jQuery, e && (h = e, h.fn.imagesLoaded = function(t, e) {
+                var i = new o(this, t, e);
+                return i.jqDeferred.promise(h(this))
+            })
+        }, o.makeJQueryPlugin(), o
+    });
+
     var $works = $('.works-grid').isotope({
         // options
         itemSelector: '.work',
@@ -125,5 +306,23 @@ layout: default
         countdown.innerHTML = days + "d " + hours + "h " +
             minutes + "m " + seconds + "s ";
     }, 1000);
+
+
+    function initMap() {
+        var show = {
+            lat: 50.743465,
+            lng: -1.896155
+        };
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 18,
+            center: show,
+            gestureHandling: 'cooperative',
+            scrollwheel: false
+        });
+        var marker = new google.maps.Marker({
+            position: show,
+            map: map
+        });
+    };
 
 </script>
