--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ layout: default
 
 <div class="home">
     <div class="splash">
+        <video playsinline autoplay muted loop poster="/assets/splash--poster.jpg" id="bgvid">
+          <source src="/assets/splash2.mp4" type="video/mp4">
+        </video>
         <img src="/assets/splash-text.svg" alt="Bournemouth University Digital Media Design Graduate Exhibition. 23-26 June 2017">
         <span id="countdown"></span>
     </div>
@@ -66,7 +69,7 @@ layout: default
 </div>
 
 <div id="modal">
-  <div id="modal-click" onclicl="backToHome();">
+  <div id="modal-click">
     <span class="modal-close-button">&times;</span>
   </div>
   <div id="modal-content"></div>
