apparently it ain't redundant

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 </div>
 
 <div id="modal">
-  <div id="modal-click">
+  <div id="modal-click" onclick="backToHome()">
     <span class="modal-close-button">&times;</span>
   </div>
   <div id="modal-content"></div>
