--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default 
 ---
 
 <div class="home">
@@ -14,8 +14,18 @@ layout: default
     <div class="wrapper">
         <section class="about" id="about">
             <h1>About</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus inventore, voluptatum harum aspernatur. Molestias, necessitatibus. Fuga alias repellendus natus nostrum ut nam fugiat officiis? Veniam laborum asperiores ipsa commodi necessitatibus.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus inventore, voluptatum harum aspernatur. Molestias, necessitatibus. Fuga alias repellendus natus nostrum ut nam fugiat officiis? Veniam laborum asperiores ipsa commodi necessitatibus.</p>
+            <p><i>A message from Liam Birtles, Programme Leader for Digital Media Design &#45;</i></p>
+            <p>
+                It is my absolute pleasure to introduce the work of the 2017 BA Digital Media Design graduating cohort. From politically challenging interactive installations through to complex data driven mobile application designs, the body of work contained within the following web pages demonstrates some of best in innovative and creative Digital Media Design that UK graduates have to offer.</p>
+            <p>
+                Over the last 3 years, this cohort have demonstrated the capacity to navigate a complex evolving media landscape, learning to create critically framed and playful socially-engaged digital media. They have found insight through engagement with technology that both challenges and informs our understanding of media and design, and through their practical making they have demonstrated their ownership of the digital domain.
+            </p>
+            <p>
+                So while it is certain that this years Digital Media Design graduates are emerging into an uncertain and complex business landscape, it is very clear from the presented work that they are prepared not only with an excellent skill-set but also with a clear sense what they hope to achieve in the future.
+            </p>
+            <p>
+                I look forward to watching their progress as they make their respective contributions to the field of Digital Media Design. I and the course teams wish them well in their careers.
+            </p>
         </section>
     </div>
 
@@ -69,16 +79,14 @@ layout: default
 </div>
 
 <div id="modal">
-  <div id="modal-click" onclick="backToHome()">
-    <span class="modal-close-button">&times;</span>
-  </div>
-  <div id="modal-content"></div>
+    <div id="modal-click" onclick="backToHome()">
+        <span class="modal-close-button">&times;</span>
+    </div>
+    <div id="modal-content"></div>
 </div>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB973waf85HgWRC76BEyUo0XOhi2wDBo30&callback=initMap"></script>
 <script>
-
-
     // set the date we're counting down to
     var target_date = new Date("Jun 23, 2017").getTime();
     var days, hours, minutes, seconds;
@@ -123,4 +131,5 @@ layout: default
             map: map
         });
     };
+
 </script>
