added register attendance section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default 
+layout: default
 ---
 
 <div class="home">
@@ -28,6 +28,15 @@ layout: default
             </p>
         </section>
     </div>
+
+    <section class="eventbrite">
+        <div class="wrapper">
+            <p>For more information on timings and to register attendance, please view our Eventbrite page</p>
+            <p>
+                <a href="https://www.eventbrite.co.uk/e/digital-media-design-graduate-exhibition-tickets-34652322028" target="_blank">Register Attendance</a>
+            </p>
+        </div>
+    </section>
 
 
     <section class="works" id="works">
