--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
           <source src="/assets/splash2.mp4" type="video/mp4">
         </video>
         <img src="/assets/splash-text.svg" alt="Bournemouth University Digital Media Design Graduate Exhibition. 23-26 June 2017">
-        <span id="countdown"></span>
+        <span id="countdown">THANKS FOR COMING</span>
     </div>
 
     <div class="wrapper">
@@ -96,32 +96,7 @@ layout: default
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB973waf85HgWRC76BEyUo0XOhi2wDBo30&callback=initMap"></script>
 <script>
-    // set the date we're counting down to
-    var target_date = new Date("Jun 23, 2017").getTime();
-    var days, hours, minutes, seconds;
 
-    var countdown = document.getElementById("countdown");
-
-    // update the tag with id "countdown" every 1 second
-    setInterval(function() {
-        // find the amount of "seconds" between now and target
-        var current_date = new Date().getTime();
-        var seconds_left = (target_date - current_date) / 1000;
-
-        // do some time calculations
-        days = parseInt(seconds_left / 86400);
-        seconds_left = seconds_left % 86400;
-
-        hours = parseInt(seconds_left / 3600);
-        seconds_left = seconds_left % 3600;
-
-        minutes = parseInt(seconds_left / 60);
-        seconds = parseInt(seconds_left % 60);
-
-        // format countdown string + set tag value
-        countdown.innerHTML = days + "d " + hours + "h " +
-            minutes + "m " + seconds + "s ";
-    }, 1000);
 
 
     function initMap() {
